--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,6 @@ version = "0.0.0"
 description = ""
 
 [tool.poetry.dependencies]
-pandas = "*"
-python = "^3.7"
-seaborn = "*"
+pandas = "^1.5.1"
+python = "^3.8"
+seaborn = "^0.12.1"
